final index file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
 
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
@@ -24,32 +29,45 @@
   <div class="page">
 
     <h1>Despite many efforts to address Air Pollution issues, the current situation is still seriously alarming.</h1>
+    <hr class="hr3">
     <h2>CO2 emissions per capita between 1960 and 2018</h2>
     <div class="pure-g">
-      <div class="pure-u-1-1">
-        <p> In 2018 carbon dioxide (CO2) accounted for 81 percent of the country’s total greenhouse gas emissions. By trapping the earth’s heat in the atmosphere, greenhouse gases lead to warmer temperatures, which in turn lead to the hallmarks of climate change: rising sea levels, more extreme weather, heat-related deaths, and the increased transmission of infectious diseases.</p>
-      </div>
     </div>
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-1">
+      <div class="pure-u-1-5">
+        <p class="smallp">In 2015 carbon dioxide (CO2) accounted for 76 percent of global total greenhouse gas emissions. By trapping
+          the earth’s heat in the atmosphere, greenhouse gases lead to warmer temperatures, which in turn lead to the
+          hallmarks of climate change: rising sea levels, more extreme weather, heat-related deaths, and the increased
+          transmission of infectious diseases.</p>
+          <p class="smallp">Since 1960, United States, Canada, Soviet Union (or now Russian Federation) and Australia have been
+          consistenly among some of the countries with the most CO2 emissions per capita. But due to the oil production,
+          few countries in the Middle East such as United Arab Emirates and Qatar took over the top of the list with
+          comical amount of CO2 emission per capita.</p>
+          <p class="smallp">Additionally, even though the worldwide CO2 emission per capita in the recent year is slightly lower than in
+          the 70s and 80s, with a rapidly increasing world population, the amount of CO2 emissionss per year has
+          increased by a significant amount which negatively affects our efforts of improving air pollution</p>
+      </div>
+      <div class="pure-u-4-5">
         <div id="vis1" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
     <br>
 
-      <hr class="hr3">
+    <hr class="hr3">
 
     <h2>Causes of CO2 emissions by fuel compustion</h2>
-    <h3>For 20 countries with the most CO2 emmisions in 2014</h3>
+    <h4>For 20 countries with the most CO2 emisions in 2014</h4>
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-3">
-        <p>Explanation Placeholder</p>
-      </div>
-      <div class="pure-u-2-3">
+      <div class="pure-u-4-5">
         <div id="vis2" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-5">
+        <br>
+        <p class="smallp">The main cause of CO2 emissions by fuel combustion in 2014 is for the production of electricity and heat with transport coming in seccond. In fact, fossil fuels generated 64.5% of worldwide electricity in 2017 ("Where does our electricity come from?," n.d.). This phenomenon is consistent for most of the examined countries with the exception of France and Brazil where large amounts of CO2 emissions are due to transportation.</p>
+        <p class="smallp">This puts forward the importance of finding replacements for those main causes of CO2 emission under fuel combustion. With some alternatives such as renewable energy and environment-friendly means of transportation, we could significantly reduce the amount of CO2 emissions and inturn improve the greenhouse effect.</p>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -58,14 +76,18 @@
     <hr class="hr3">
 
 
-    <h2>PM2.5 mean annual concentration</h2>
+    <h2>PM2.5 mean annual concentration for 1990 and 2017</h2>
     <div class="pure-g">
-      <div class="pure-u-1-2">
-        <p>According to WHO, PM is a common proxy indicator for air pollution. It affects more people than any other pollutant. The major components of PM are sulfate, nitrates, ammonia, sodium chloride, black carbon, mineral dust and water. It consists of a complex mixture of solid and liquid particles of organic and inorganic substances suspended in the air.</p>
+      <div class="pure-u-1-3">
+        <p class="smallp">PM2.5, particles with a diameter of 2.5 microns or less, can penetrate the lung barrier and enter the blood system. Chronic exposure to particles contributes to
+          the risk of developing cardiovascular and respiratory diseases, as well as of lung cancer.</p>
       </div>
-      <div class="pure-u-1-2">
-        <p>While particles  with a diameter of 10 microns or less, (≤ PM10) can penetrate and lodge deep inside the lungs, the even more health-damaging particles are those with a diameter of 2.5 microns or less, (≤ PM2.5). PM2.5  can penetrate the lung barrier and enter the blood system. Chronic exposure to particles contributes to the risk of developing cardiovascular and respiratory diseases, as well as of lung cancer.
-        </div>
+      <div class="pure-u-1-3">
+        <p class="smallp">Overall, the annual mean PM2.5 concentration were seemingly unchanged around the world with most countries in the regions of North Africa, Europe, South and Southeast Asia having slightly worse values in 2017 while already being in a terrible situation.</p>
+      </div>
+      <div class="pure-u-1-3">
+        <p class="smallp">Additionally, most of the countries were significantly far away from the WHO guideline target of 5μg/m3 both in 1990 and 2017 with only the United States, Canada, Australia and Northen Europe countries close to this value in the recent year of 2017.</p> 
+      </div>
     </div>
     <!-- pure grid group -->
     <div class="pure-g">
@@ -75,8 +97,17 @@
     </div>
     <!-- end pure grid group -->
     <br>
+    
 
     <hr class="hr3">
+
+    <h2>Conclusion</h2>
+    <p class="conclusion">With the current problem of air pollution, which is affecting both the environmental and people's health, had not been improved over the year but rather getting worse as indicated by multiple metrics, it is crucial to find timely solutions to tackles the main causes of those issues before the point of no return.</p>
+
+    <hr class="hr3">
+    <h2>References</h2>
+    <p class="smallp">"Where does our electricity come from?". (n.d.). Retrieved from https://world-nuclear.org/nuclear-essentials/where-does-our-electricity-come-from.aspx</p>
+    <p class="smallp">World Bank, World Development Indicators. (2020). Environment Statistic[Data file]. Retrieved from https://databank.worldbank.org/</p>
 
   </div>
 
