Change spelling error

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <hr class="hr3">
 
-    <h2>Causes of CO2 emissions by fuel compustion</h2>
+    <h2>Causes of CO2 emissions by fuel combustion</h2>
     <h4>For 20 countries with the most CO2 emisions in 2014</h4>
     <!-- pure grid group -->
     <div class="pure-g">
